Fix ugly scrollbar situation + positioning issue on iOS devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -304,6 +304,15 @@ body.no-scroll {
 /**** Mosaic ****/
 /****************/
 
+#mosaic-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  overflow: scroll;
+}
+
 #mosaic {
   font-size: 7px;
   margin-left: auto;
